modifications tous scénarios

--- a/scenario3_etape3_03_tous_risques.html
+++ b/scenario3_etape3_03_tous_risques.html
@@ -554,7 +554,7 @@
       <h3>VOTRE TARIF ASSURANCE AUTO  <span>309 € /an<span></h3>
       <div class="ui section inverted divider"></div>
       <button class="big ui green button cta">
-        Voir le récapitulatif et souscrire  <i class="chevron right icon"></i>
+        Valider la sélection et souscrire  <i class="chevron right icon"></i>
       </button>
     </div>
   </div>
