--- a/scenario5.html
+++ b/scenario5.html
@@ -101,7 +101,12 @@
               </th>
             </tr>
             <tr>
-              <th></th>
+              <th class="legende">
+                <div class="ui grid legende">
+                  <div class="one wide column"><img src="images/recommandation_badge.svg"></div>
+                  <div class="fourteen wide column description">Niveau de garantie recommandé par AXA<br> suivant votre profil</div>
+                </div>
+            </th>
               <th>
                 <span class="active"></span>
                 <div class="ui radio checkbox tiers">
@@ -350,11 +355,7 @@
           </tbody>
           <thead>
             <tr>
-              <th class="legende">
-                <div class="ui grid legende">
-                  <div class="one wide column"><img src="images/recommandation_badge.svg"></div>
-                  <div class="fourteen wide column description">Niveau de garantie<br>recommandé par AXA<br> suivant votre profil</div>
-                </div>
+              <th>
               </th>
               <th>
                 <span class="active"></span>
@@ -674,7 +675,7 @@
   <h3>VOTRE TARIF ASSURANCE AUTO  <span>323 € /an<span></h3>
   <div class="ui section inverted divider"></div>
   <button class="big ui green button cta">
-    Souscrire  <i class="chevron right icon"></i>
+    Valider la sélection et souscrire  <i class="chevron right icon"></i>
   </button>
 
 
