--- a/scenario6.html
+++ b/scenario6.html
@@ -109,7 +109,8 @@
                 <div class="level"><span>FORMULE 4</span></div>
                 <div class="price">539 €<br><span>par an</span></div>
               </th>
-              <th>
+              <th class="recommandation">
+                <img src="images/recommandation_badge.svg" class="icon-recommandation icon offerBadge"></i>
                 <span class="active"></span>
                 <div class="level"><span>FORMULE 5</span></div>
                 <div class="price">586 €<br><span>par an</span></div>
@@ -131,7 +132,12 @@
               </th>
             </tr>
             <tr>
-              <th></th>
+              <th class="legende">
+                <div class="ui grid legende">
+                  <div class="one wide column"><img src="images/recommandation_badge.svg"></div>
+                  <div class="fourteen wide column description">Niveau de garantie<br>recommandé par AXA<br> suivant votre profil</div>
+                </div>
+              </th>
               <th>
                 <span class="active"></span>
                 <div class="ui radio checkbox formule1">
@@ -289,6 +295,24 @@
             </tr>
             <tr>
               <td>
+                <h4>Catastrophe Naturelle<br><span>franchise réglementaire</span>
+                  <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
+                  <div class="ui popup transition hidden">
+                    Nous vous indemnisons pour les dommages matériels subis par votre véhicule à la suite d’une catastrophe naturelle ou technologique déclarée par arrêté ministériel au Journal Officiel, ou à la suite d’un attentat tel que défini par le Code pénal.
+                  </div>
+                </h4>
+              </td>
+              <td><span class="active"></span><i class="icon-cross icon"></i></td>
+              <td><span class="active"></span><i class="icon-check icon"></i></td>
+              <td><span class="active"></span><i class="icon-check icon"></i></td>
+              <td><span class="active"></span><i class="icon-check icon"></i></td>
+              <td><span class="active"></span><i class="icon-check icon"></i></td>
+              <td><span class="active"></span><i class="icon-check icon"></i></td>
+              <td><span class="active"></span><i class="icon-check icon"></i></td>
+              <td><span class="active"></span><i class="icon-check icon"></i></td>
+            </tr>
+            <tr>
+              <td>
                 <h4>Vol, incendie et événements climatiques
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
                   <div class="ui popup transition hidden">
@@ -305,24 +329,6 @@
               <td><span class="active"></span><i class="icon-check icon"></i>sans franchise</td>
               <td><span class="active"></span><i class="icon-check icon"></i>sans franchise</td>
               <td><span class="active"></span><i class="icon-check icon"></i>sans franchise</td>
-            </tr>
-            <tr>
-              <td>
-                <h4>Catastrophe Naturelle<br><span>franchise réglementaire</span>
-                  <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
-                  <div class="ui popup transition hidden">
-                    Nous vous indemnisons pour les dommages matériels subis par votre véhicule à la suite d’une catastrophe naturelle ou technologique déclarée par arrêté ministériel au Journal Officiel, ou à la suite d’un attentat tel que défini par le Code pénal.
-                  </div>
-                </h4>
-              </td>
-              <td><span class="active"></span><i class="icon-cross icon"></i></td>
-              <td><span class="active"></span><i class="icon-check icon"></i></td>
-              <td><span class="active"></span><i class="icon-check icon"></i></td>
-              <td><span class="active"></span><i class="icon-check icon"></i></td>
-              <td><span class="active"></span><i class="icon-check icon"></i></td>
-              <td><span class="active"></span><i class="icon-check icon"></i></td>
-              <td><span class="active"></span><i class="icon-check icon"></i></td>
-              <td><span class="active"></span><i class="icon-check icon"></i></td>
             </tr>
             <tr>
               <td>
@@ -430,11 +436,10 @@
             </tr>
             <tr>
               <td>
-                <h4>0 franchise en cas de prêt de volant <span>à un conducteur de plus de 3 ans de permis</span>
+                <h4>Equipements non montés<br>en série
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
-
                   <div class="ui popup transition hidden">
-                    Lorsque vous prêtez votre véhicule à une personne autre que votre conjoint, une franchise complémentaire de 1500 € s’applique en cas d’accident  responsable. Cette option vous permet de supprimer la franchise complémentaire pour certains types de conducteurs à qui vous prêtez votre véhicule.
+                    Nous indemnisons les équipements de votre véhicule non montés en série (coffre de toit, porte-vélos, aménagement pour personne handicapée...) jusqu’à 3500 € au titre des garanties incendie, vol, événements climatiques, et dommages tous accidents si celles-ci sont souscrites.
                   </div>
                 </h4>
               </td>
@@ -444,7 +449,7 @@
               <td><span class="active"></span><i class="icon-cross icon"></i></td>
               <td><span class="active"></span><i class="icon-cross icon"></i></td>
               <td><span class="active"></span><i class="icon-cross icon"></i></td>
-              <td><span class="active"></span><i class="icon-check icon"></i></td>
+              <td><span class="active"></span><i class="icon-cross icon"></i></td>
               <td><span class="active"></span><i class="icon-check icon"></i></td>
             </tr>
             <tr>
@@ -471,24 +476,6 @@
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
                   <div class="ui popup transition hidden">
                     Cette garantie s’applique jusqu’au 100 000ème km du véhicule.
-                  </div>
-                </h4>
-              </td>
-              <td><span class="active"></span><i class="icon-cross icon"></i></td>
-              <td><span class="active"></span><i class="icon-cross icon"></i></td>
-              <td><span class="active"></span><i class="icon-cross icon"></i></td>
-              <td><span class="active"></span><i class="icon-cross icon"></i></td>
-              <td><span class="active"></span><i class="icon-cross icon"></i></td>
-              <td><span class="active"></span><i class="icon-cross icon"></i></td>
-              <td><span class="active"></span><i class="icon-cross icon"></i></td>
-              <td><span class="active"></span><i class="icon-check icon"></i></td>
-            </tr>
-            <tr>
-              <td>
-                <h4>Equipements non montés<br>en série
-                  <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
-                  <div class="ui popup transition hidden">
-                    Nous indemnisons les équipements de votre véhicule non montés en série (coffre de toit, porte-vélos, aménagement pour personne handicapée...) jusqu’à 3500 € au titre des garanties incendie, vol, événements climatiques, et dommages tous accidents si celles-ci sont souscrites.
                   </div>
                 </h4>
               </td>
@@ -615,18 +602,7 @@
 </div>
 
 
-<!-- FOOTER -->
-<div id="footer" class="ui vertical center aligned segment">
 
-  <h3>VOTRE TARIF ASSURANCE AUTO  <span>323 € /an<span></h3>
-  <div class="ui section inverted divider"></div>
-  <button class="big ui green button cta">
-    Souscrire  <i class="chevron right icon"></i>
-  </button>
-
-
-</div>
-<!-- FIN FOOTER -->
 <!-- AVANTAGES -->
 <div id="avantages" class="ui vertical segment passedFooter">
 
@@ -739,6 +715,19 @@
 
 </div>
 <!-- FIN AVANTAGES -->
+<!-- FOOTER -->
+<div id="footer" class="ui vertical center aligned segment">
+
+  <h3>VOTRE TARIF ASSURANCE AUTO  <span>323 € /an<span></h3>
+  <div class="ui section inverted divider"></div>
+  <button class="big ui green button cta">
+    Souscrire  <i class="chevron right icon"></i>
+  </button>
+
+
+</div>
+<!-- FIN FOOTER -->
+
 
 
 
