--- a/scenario6.html
+++ b/scenario6.html
@@ -449,7 +449,7 @@
               <td><span class="active"></span><i class="icon-cross icon"></i></td>
               <td><span class="active"></span><i class="icon-cross icon"></i></td>
               <td><span class="active"></span><i class="icon-cross icon"></i></td>
-              <td><span class="active"></span><i class="icon-cross icon"></i></td>
+              <td><span class="active"></span><i class="icon-check icon"></i></td>
               <td><span class="active"></span><i class="icon-check icon"></i></td>
             </tr>
             <tr>
