--- a/scenario3_etape3_03_tous_risques.html
+++ b/scenario3_etape3_03_tous_risques.html
@@ -173,7 +173,8 @@
                       <div class="content">
                         Prêt de volant <img src="images/information_colored.svg" class="iconInfo pop" data-variation="inverted" data-position="top center">
                         <div class="ui popup transition hidden" >
-                          Lorsque vous prêtez votre véhicule à une personne autre que votre conjoint, une franchise complémentaire de 1500 € s’applique en cas d’accident  responsable. Cette option vous permet de supprimer la franchise complémentaire pour certains types de conducteurs à qui vous prêtez votre véhicule
+                          Lorsque vous prêtez votre véhicule à une personne autre que votre conjoint, une franchise complémentaire de 1500 € s’applique en cas d’accident responsable.
+                          Cette option supprime la franchise complémentaire dans les cas où vous prêtez votre véhicule à un conducteur ayant plus de 3 ans de permis ou à vos propres enfants ayant le permis.
                         </div>
                       </div>
                     </h4>
