--- a/scenario6.html
+++ b/scenario6.html
@@ -280,7 +280,7 @@
                 <h4>Bris de glace
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
                   <div class="ui popup transition hidden">
-                    En fonction du niveau choisi, nous prenons en charge les frais de réparation ou de remplacement des éléments vitrés endommagés : pare-brise, vitres, feux avant ou toit vitré.
+                    En fonction de la formule choisie, nous prenons en charge les frais de réparation ou de remplacement des éléments vitrés endommagés : pare-brise, vitres, feux avant ou toit vitré.
                   </div>
                 </h4>
               </td>
@@ -295,7 +295,7 @@
             </tr>
             <tr>
               <td>
-                <h4>Catastrophe Naturelle<br><span>franchise réglementaire</span>
+                <h4>Catastrophes naturelles, technologiques et attentats<br><span>franchise réglementaire</span>
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
                   <div class="ui popup transition hidden">
                     Nous vous indemnisons pour les dommages matériels subis par votre véhicule à la suite d’une catastrophe naturelle ou technologique déclarée par arrêté ministériel au Journal Officiel, ou à la suite d’un attentat tel que défini par le Code pénal.
@@ -353,7 +353,8 @@
                 <h4>Prêt de véhicule
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
                   <div class="ui popup transition hidden">
-                    Lorsque vous prêtez votre véhicule à une personne autre que votre conjoint, une franchise complémentaire de 1500 € s’applique en cas d’accident  responsable. Cette option vous permet de supprimer la franchise complémentaire pour certains types de conducteurs à qui vous prêtez votre véhicule.
+                    Lorsque vous prêtez votre véhicule à une personne autre que votre conjoint, une franchise complémentaire de 1500 € s’applique en cas d’accident responsable.
+                    Cette option supprime la franchise complémentaire dans les cas où vous prêtez votre véhicule à un conducteur ayant plus de 3 ans de permis ou à vos propres enfants ayant le permis.
                   </div>
                 </h4>
               </td>
@@ -373,8 +374,8 @@
                   <div class="ui popup transition hidden">
                     Votre véhicule vous est remboursé :
                     <ul>
-                      <li>à sa valeur d’achat  si le sinistre intervient durant les premières années   du véhicule (le nombre d’années est fonction du niveau choisi)</li>
-                      <li>et à sa valeur marché majorée si le sinistre intervient au-delà </li>
+                      <li>à sa valeur d’achat si le sinistre intervient durant les 3 premières années du véhicule</li>
+                      <li>et à sa valeur marché + 15% si le sinistre intervient au-delà</li>
                     </ul>
                     La valeur d’achat correspond au prix auquel vous avez acheté votre véhicule.<br>
                     La valeur marché correspond au prix auquel le véhicule aurait pu être vendu juste avant le sinistre. Elle est toujours déterminée par un expert.
@@ -413,7 +414,7 @@
                 <h4>Protection juridique
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
                   <div class="ui popup transition hidden">
-                    Information juridique par téléphone et accompagnement jusqu’à la résolution amiable ou judiciaire du litige et la prise en charge des frais et honoraires  (experts, avocats…) jusqu’à 10 000 €.<br>Domaines d’application :<br>
+                    Information juridique par téléphone et accompagnement jusqu’à la résolution amiable ou judiciaire du litige et la prise en charge des frais et honoraires (experts, avocats…) jusqu’à 10 000 €.<br>Domaines d’application :<br>
                     <ul>
                       <li>l’achat ou la vente du véhicule,</li>
                       <li>le contrôle technique,</li>
@@ -439,7 +440,7 @@
                 <h4>Equipements non montés<br>en série
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
                   <div class="ui popup transition hidden">
-                    Nous indemnisons les équipements de votre véhicule non montés en série (coffre de toit, porte-vélos, aménagement pour personne handicapée...) jusqu’à 3500 € au titre des garanties incendie, vol, événements climatiques, et dommages tous accidents si celles-ci sont souscrites.
+                    Nous indemnisons les équipements de votre véhicule non montés en série (coffre de toit, porte-vélos, aménagement pour personne handicapée...) jusqu’à 3500 € au titre des garanties incendie, vol, événements climatiques, et dommages tous accidents.
                   </div>
                 </h4>
               </td>
@@ -475,7 +476,7 @@
                 <h4>Réparations suite à panne
                   <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
                   <div class="ui popup transition hidden">
-                    Cette garantie s’applique jusqu’au 100 000ème km du véhicule.
+                    Nous prenons en charge vos réparations suite à une panne mécanique et/ou électrique jusqu’au 100 000<sup>ème</sup> km de votre véhicule.
                   </div>
                 </h4>
               </td>
